apps/manifests/argocd/argocd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argo-ingress
  namespace: argocd
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: traefik-system-retry@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - argo.scigames.at
    secretName: wildcard-scigames
  rules:
  - host: argo.scigames.at
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              number: 80
